--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
 
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -31,6 +32,10 @@
       <img src="dj disk.gif" class="div_volume_img">
       <br>
       <h3 class="btn btn-danger" id="volume">Volume</h3>
+      </div>
+      <br><br>
+
+      <button onclick="play()" class="btn btn-success">Play</button>
 </center>
 
 <script src="main.js"></script>
